tests/verbatim_scanner/correct/empty_blocks.txxt
Expected: [[2,3,"empty"]]
Anonymous verbatim (empty):
()